--- a/app.json
+++ b/app.json
@@ -15,6 +15,11 @@
   },
   "addons": [
   ],
+  "buildpacks": [
+    {
+      "url": "heroku/node.js"
+    }
+  ],
   "env": {
     "BUILDPACK_URL": "https://github.com/heroku/heroku-buildpack-nodejs"
   }
